Bug 164577 - Updating class name doesn't update the slotted content's style
Summary: Updating class name doesn't update the slotted content's style
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
: 160865 (view as bug list)
Depends on:
Blocks: 148695
  Show dependency treegraph
 
Reported: 2016-11-09 18:35 PST by Ryosuke Niwa
Modified: 2016-11-11 15:11 PST (History)
9 users (show)

See Also:


Attachments
Demo (586 bytes, text/html)
2016-11-09 18:35 PST, Ryosuke Niwa
no flags Details
patch (16.52 KB, patch)
2016-11-11 03:42 PST, Antti Koivisto
no flags Details | Formatted Diff | Diff
patch (16.53 KB, patch)
2016-11-11 09:38 PST, Antti Koivisto
no flags Details | Formatted Diff | Diff
patch (15.84 KB, patch)
2016-11-11 09:43 PST, Antti Koivisto
rniwa: review+
Details | Formatted Diff | Diff
patch for landing (15.93 KB, patch)
2016-11-11 14:35 PST, Antti Koivisto
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2016-11-09 18:35:11 PST
Created attachment 294319 [details]
Demo

::slotted(.selected) wouldn't apply when the class name is applied dynamically.
Comment 1 Radar WebKit Bug Importer 2016-11-10 13:27:19 PST
<rdar://problem/29205873>
Comment 2 Ryosuke Niwa 2016-11-10 15:42:40 PST
*** Bug 160865 has been marked as a duplicate of this bug. ***
Comment 3 Ryosuke Niwa 2016-11-10 15:43:26 PST
A few more test cases listed on https://polymerlabs.github.io/wc-demos/
Comment 4 Antti Koivisto 2016-11-11 03:42:57 PST
Created attachment 294494 [details]
patch
Comment 5 Antti Koivisto 2016-11-11 09:38:10 PST
Created attachment 294501 [details]
patch
Comment 6 Antti Koivisto 2016-11-11 09:43:34 PST
Created attachment 294502 [details]
patch
Comment 7 Ryosuke Niwa 2016-11-11 13:06:53 PST
Comment on attachment 294502 [details]
patch

View in context: https://bugs.webkit.org/attachment.cgi?id=294502&action=review

> LayoutTests/fast/shadow-dom/css-scoping-slotted-invalidation.html:86
> +

Maybe we should add a test which involves multiple slots in a single shadow tree?
Comment 8 Antti Koivisto 2016-11-11 14:35:44 PST
Created attachment 294539 [details]
patch for landing
Comment 9 WebKit Commit Bot 2016-11-11 15:11:40 PST
Comment on attachment 294539 [details]
patch for landing

Clearing flags on attachment: 294539

Committed r208616: <http://trac.webkit.org/changeset/208616>
Comment 10 WebKit Commit Bot 2016-11-11 15:11:46 PST
All reviewed patches have been landed.  Closing bug.