Source/WebCore/style/ClassChangeInvalidation.h
@@ -69,7 +69,7 @@ inline ClassChangeInvalidation::~ClassChangeInvalidation()
         return;
     invalidateDescendantStyle();
 }
-    
+
 }
 }
 
